[package]
name = "corgi"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
hyper = { version = "1.4.0", features = ["full"] }
tokio = { version = "1.38.0", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"